[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ASAAS-SDK"
version = "0.0.1"
authors = [
  { name="Gabriel Niziolek", email="ganiziolek@gmail.com" },
]
description = " Biblioteca não oficial de comunicação com a API de pagamento do ASAAS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests >= 2.28",
]

[project.urls]
"Homepage" = "https://github.com/GaNiziolek/asaas-sdk"
"Bug Tracker" = "https://github.com/GaNiziolek/asaas-sdk/issues"