[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asaas-sdk"
version = "1.0.0"
authors = [
  { name="Gabriel Niziolek", email="ganiziolek@gmail.com" },
]
description = " Biblioteca não oficial de comunicação com a API de pagamento do ASAAS"
keywords = ["asaas", "sdk", "payment"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
  "requests >= 2.28",
  "jsonpickle >= 3.0.0",
  "python-dotenv >= 0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/GaNiziolek/asaas-sdk"
"Bug Tracker" = "https://github.com/GaNiziolek/asaas-sdk/issues"